Start adding geometric calculations and controls for tank

--- a/www/index.html
+++ b/www/index.html
@@ -20,10 +20,13 @@
 	<!--[if lt IE 7]>
 	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
+
+	<div id="arena" class="arena">
+	</div>
 	
 	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/game.js"></script>
+	<script type="text/javascript" src="js/tanks.js"></script>
 	<script type="text/javascript" src="js/client.js"></script>
 	<script>
 		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
