Add tank info and allow user to choose tank name

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,15 @@
 	<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 	<![endif]-->
 
+	<div id="prompt" class="name-prompt">
+		<div class="input-group">
+	      <input id="tank-name" type="text" class="form-control" placeholder="Name your tank" autocomplete="off">
+	      <span class="input-group-btn">
+	        <input id="join" class="btn btn-primary" type="submit" value="Join the battle">
+	      </span>
+	    </div>
+	</div>
+
 	<div id="arena" class="arena">
 	</div>
 	
