Add socket connections to play multiplayer

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
 	
 	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/socket.io.js"></script>
 	<script type="text/javascript" src="js/tanks.js"></script>
 	<script type="text/javascript" src="js/client.js"></script>
 	<script>
