Add tank selection Sync tanks between players

--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,20 @@
 	        <input id="join" class="btn btn-primary" type="submit" value="Join the battle">
 	      </span>
 	    </div>
+	    <div class="tank-select col-md-12">
+	    	<label>Choose your tank:</label>
+	      	<ul class="tank-selection">
+	      		<li class="selected" data-tank="1">
+	      			<img src="img/preview-tank-1.png">
+	      		</li>
+	      		<li data-tank="2">
+	      			<img src="img/preview-tank-2.png">
+	      		</li>
+	      		<li data-tank="3">
+	      			<img src="img/preview-tank-3.png">
+	      		</li>
+	      	</ul>
+    	</div>
 	</div>
 
 	<div id="arena" class="arena">
