Add link to my website

--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,9 @@
     	</div>
 	</div>
 
+	<div style="width:100%;float: right;">
+		<a href="http://rubentd.com">rubentd.com</a>
+	</div>
 	<div id="arena" class="arena">
 	</div>
 	
